Fix scroll snap (check #6) prevent double viewport scrollbars, but break scroll-snap on Safari

--- a/css/main.css
+++ b/css/main.css
@@ -26,13 +26,9 @@
 }
 
 /* Scroll snap */
-html, body {
-  height: 100vh;
-  width: 100vw;
-  overflow-x: hidden;
-}
-body {
+html {
   scroll-snap-type: y proximity;
+  overflow-y: visible;
 }
 
 
